--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
                   style="font-size:55px"></i></div>
             </div>
-            <img class="img-fluid" src="images\sweepstake.png" alt="sweepstakes" />
+            <img class="img-fluid" src="images\sweepstakes.jpg" alt="sweepstakes" />
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -292,8 +292,8 @@
                   <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <img class="img-fluid rounded mb-5" src="images\sweepstake.png" alt="sweepstakes" />
-                <p class="mb-5">Would you like to creat a sweepstakes? You can with this!</p>
+                <img class="img-fluid rounded mb-5" src="images\sweepstakes.jpg" alt="sweepstakes" />
+                <p class="mb-5">Would you like to create a sweepstakes? You can with this!</p>
                 <a href="https://github.com/meekhunsutp/SweepstakesDCC"><button type="button"
                     class="btn btn-primary btn-block">Git Repo</button></a>
                   <br />
