--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body class="bg-secondary">
   <nav class="navbar navbar-expand-lg bg-success text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a style="color:midnightblue" class="navbar-brand js-scroll-trigger" href="#home">HOME</a>
+
+      <a href="#home" class="navbar-brand js-scroll-trigger"><img src="images\output-pm.png" alt="initials" style="color:midnightblue; width:75px;height:75px;"></a>
       <button style="color:midnightblue"
         class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
         type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
