Updated contact links and About Me descriptions

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; color:midnightblue"
+          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; font-weight: bold; color:midnightblue"
               class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; color:midnightblue"
+          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; font-weight: bold; color:midnightblue"
               class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
-          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; color:midnightblue"
+          <li class="nav-item mx-0 mx-lg-1"><a style="font-size:18px; font-weight: bold; color:midnightblue"
               class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
         <div class="divider-custom-icon"><i class="fas fa-star" style="font-size:36px;color:whitesmoke"></i></div>
         <div class="divider-custom-line"></div>
       </div>
-      <p class="lead mb-0">Student at devCodeCamp</p>
+      <p class="lead mb-0">Full Stack Software Developer | C# | .NET</p>
       <br />
     </div>
   </header>
@@ -125,8 +125,15 @@
       <div class="row">
 
         <div class="col-lg-12 text-center ml-auto">
-          <p class="lead">Hey look, thats me! This is my first try at a webpage. More information, projects, and cool
-            stuff to come soon. Until then, enjoy the mess!</p>
+          <p class="lead">Dedicated and results-oriented Software Developer eager to make a positive
+            impact as part of a team. I enjoy thinking critically to solve complex problems
+            and thrive in fast-paced environments. Being a fast learner and having a strong
+            work ethic, I am excited to leverage the interpersonal and technical skills
+            acquired while also looking to learn and collaborate to attain team goals.</p>
+            <p class="lead">From my varied education and experiences, I have accumulated a unique set of skills 
+              that I am able to apply and tackle problems in both logical and creative ways. I love to be intellectually 
+              challenged, have a critical eye for inefficiency, and an instinctive desire to find solutions. I look forward 
+              to the challenge of any current or future technologies. </p>
         </div>
       </div>
 
@@ -148,8 +155,8 @@
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/pmeekhunsut"><i
               class="fab fa-fw fa-facebook-f"></i></a>
           <a class="btn btn-outline-light btn-social mx-1"
-            href="https://www.linkedin.com/in/pasavit-meekhunsut-88981456/"><i class="fab fa-fw fa-linkedin-in"></i></a>
-          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/meekhunsutp"><i
+            href="https://www.linkedin.com/in/pasavit/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/pasavit"><i
               class="fab fa-github"></i></a>
         </div>
         <div class="col-lg-6 mx-auto">
