added modals and intro to portfolio section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <div class="divider-custom-icon"><i class="fas fa-star" style="font-size:36px;color:whitesmoke"></i></div>
         <div class="divider-custom-line"></div>
       </div>
+      <div class="col-lg-12 text-center text-white ml-auto">
+        <p class="lead">Follow my journey and check out my progression from my very first project! </br> Click each project to find out more, visit the link to review the code.</p></br>
+      </div>
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4 mb-5">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
@@ -84,7 +87,7 @@
             <img class="img-fluid" src="images\soda2.jpg" alt="Soda Machine" />
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+        <div class="col-md-6 col-lg-4 mb-5">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
@@ -93,8 +96,17 @@
             <img class="img-fluid" src="images\sweepstakes.jpg" alt="sweepstakes" />
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+        <div class="col-md-6 col-lg-4 mb-5">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
+                  style="font-size:55px"></i></div>
+            </div>
+            <img class="img-fluid" src="images\mostwanted2.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
                   style="font-size:55px"></i></div>
@@ -102,8 +114,26 @@
             <img class="img-fluid" src="images\comingsoon.jpg" alt="" />
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
+                  style="font-size:55px"></i></div>
+            </div>
+            <img class="img-fluid" src="images\sweepstakes.jpg" alt="sweepstakes" />
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
+                  style="font-size:55px"></i></div>
+            </div>
+            <img class="img-fluid" src="images\comingsoon.jpg" alt="" />
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal9">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
                   style="font-size:55px"></i></div>
@@ -116,7 +146,7 @@
   </section>
   <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
-      <h3 class="page-section-heading title-gold text-center text-uppercase">About</h3>
+      <h3 class="page-section-heading title-gold text-center text-uppercase">About Me</h3>
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star" style="font-size:36px;color:whitesmoke"></i></div>
@@ -301,7 +331,10 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <img class="img-fluid rounded mb-5" src="images\sweepstakes.jpg" alt="sweepstakes" />
-                <p class="mb-5">Would you like to create a sweepstakes? You can with this!</p>
+                <p class="mb-5">Would you like to create a sweepstakes? You can with this!</br></br>
+                  Technologies: C#, Design Patterns and Data Structures</br></br>
+                  Description: Using Dependency Injection and the Factory Design Pattern, this app allows users to choose between Stack or Queue Data Structures
+                </p>
                 <a href="https://github.com/meekhunsutp/SweepstakesDCC"><button type="button"
                     class="btn btn-primary btn-block">Git Repo</button></a>
                   <br />
@@ -323,16 +356,17 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Coming
-                  Soon</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Most Wanted</h2>
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <img class="img-fluid rounded mb-5" src="images\comingsoon.jpg" alt="" />
-                <p class="mb-5">More projects to come soon!</p>
-                <a href="https://github.com/meekhunsutp"><button type="button" class="btn btn-primary btn-block">Git
+                <img class="img-fluid rounded mb-5" src="images\MostWanted2.png" alt="" />
+                <p class="mb-5">Searching for someone? Use this tool to narrow down your search!</br></br>
+                  Technologies: JavaScript</br></br>
+                  Description: Most Wanted is an app where the user is able to search through an array of JSON objects by 1-5 criterion through window.alert and window.prompt as the UI for a suspect.</p>
+                <a href="https://github.com/pasavit/MostWanted"><button type="button" class="btn btn-primary btn-block">Git
                     Repo</button></a>
                   <br />
               </div>
@@ -373,6 +407,100 @@
       </div>
     </div>
   </div>
+  <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog"
+  aria-labelledby="portfolioModal4Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">
+                sweepstakes</h2>
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+              </div>
+              <img class="img-fluid rounded mb-5" src="images\sweepstakes.jpg" alt="sweepstakes" />
+              <p class="mb-5">Would you like to create a sweepstakes? You can with this!</br></br>
+                Technologies: C#, Design Patterns and Data Structures</br></br>
+                Description: Using Dependency Injection and the Factory Design Pattern, this app allows users to choose between Stack or Queue Data Structures
+              </p>
+              <a href="https://github.com/meekhunsutp/SweepstakesDCC"><button type="button"
+                  class="btn btn-primary btn-block">Git Repo</button></a>
+                <br />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog"
+  aria-labelledby="portfolioModal5Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Coming
+                Soon</h2>
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+              </div>
+              <img class="img-fluid rounded mb-5" src="images\comingsoon.jpg" alt="" />
+              <p class="mb-5">More projects to come soon!</p>
+              <a href="https://github.com/meekhunsutp"><button type="button" class="btn btn-primary btn-block">Git
+                  Repo</button></a>
+                <br />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog"
+  aria-labelledby="portfolioModal6Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Coming
+                Soon
+              </h2>
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+              </div>
+              <img class="img-fluid rounded mb-5" src="images\comingsoon.jpg" alt="" />
+              <p class="mb-5">More projects to come soon!</p>
+              <a href="https://github.com/meekhunsutp"><button type="button" class="btn btn-primary btn-block">Git
+                  Repo</button></a>
+                <br />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
