Added Trash Collector Modal

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="portfolio-item-caption-content text-center text-white"><i class="fa fa-eye"
                   style="font-size:55px"></i></div>
             </div>
-            <img class="img-fluid" src="images\comingsoon.jpg" alt="" />
+            <img class="img-fluid" src="images\trash3.png" alt="" />
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5">
@@ -395,9 +395,19 @@
                   <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <img class="img-fluid rounded mb-5" src="images\comingsoon.jpg" alt="" />
-                <p class="mb-5">More projects to come soon!</p>
-                <a href="https://github.com/meekhunsutp"><button type="button" class="btn btn-primary btn-block">Git
+                <img class="img-fluid rounded mb-5" src="images\trash3.png" alt="" />
+                <p class="mb-5">Organize your trash collection account with ease!</br></br>
+                  Technologies: C#, ASP.NET Core MVC, ASP.NET roles, Entity Framework, HMTL5/CSS, SQL, Google APIs</br></br>
+
+                  Description: This app allows customers to easily view and update their profile as well as manage their services 
+                  such as preferred collection day, schedule an additional pick up, or suspend their collection for a period of time. 
+                  The customer can view their balance in their profile AND in the future be able to make payments right in the application 
+                  instead of mailing in their monthly payments! As for the Companies side. Employees will be able to log in and see a list 
+                  of customers that have service scheduled that day. The employee can also search within different zip codes or view upcoming 
+                  schedules for other days. Once the employee has made the pick up, they can confirm their service has completed and bill to 
+                  the customers account. This view also includes all the customers marked on the map so they can easily plan the most efficient 
+                  route for their work day.</p>
+                <a href="https://github.com/pasavit/TrashCollection"><button type="button" class="btn btn-primary btn-block">Git
                     Repo</button></a>
                   <br />
               </div>
